--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<h2>Vrakas Labs</h2>
+Here at Vrakas Labs, we manufacture and sell a range of avionics systems for research and amateur use.
+
+<h4>StratoChovy</h4>
+StratoChovy is a rocket flight computer, which integrates both an in-house altimeter and deployment system, in addition to a 3rd party StratologgerCF altimeter, to provide dis-similar hardware redundancy.
+
+<img src="front.jpg" height="400">
+<img src="back.jpg" height="400">
+
+<h5>Base Price: 1000$</h5>
+<h5>Please reach out to tim@vrakaslabs.net to order.</h5>
